--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,25 @@
+/*Universal Selector*/
+* {
+    margin:0;
+    box-sizing: border-box;
+    padding:0;
+  
+}
+
+/*Element Selectors*/
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 2.5rem;
+    background-color:whitesmoke;
+}
+
+/*Class Selectors*/
 .search-column{
     background-color:	#D3D3D3;
 }
 
 .list-group-item{
-    line-height: 0.5;
+    line-height: 0.5rem;
     border: none;
 }
 .card-body{
@@ -25,4 +41,13 @@ span.favorable{
     padding: 3px;
     background-color: green;
     color:white;
+}
+
+.border {
+ border: 2px solid gray;
+
+}
+
+#fiveday-container{
+    flex-wrap: wrap;
 }
